--- a/i.html
+++ b/i.html
@@ -1,26 +1,19 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-firestore-compat.js"></script>
-<script src="firebaseconfig.js"></script>	
+	<script src="firebaseconfig.js"></script>	
+	<link rel="stylesheet" type="text/css" href="css.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	<title>Alışveriş Listesi</title>
 </head>
-
-<!-- <style>
-	body{
-		background-image: url("images.jfif");
-	}	5
-</style> -->
-
 <body>
+	<div id="toast" class="toast"></div>
 	<div id="editToastContainer"></div>
 	<div class="container p-3">	
 		<h2 class="app-title" id="header"><i class="fa fa-shopping-basket" ></i> Alışveriş Listesi</h2>	
@@ -63,8 +56,7 @@
 		</div>
 	</div>
 </div>
-
-	<script src="js.js" > </script>	
+<script src="js.js" > </script>	
 <script src="local.js" > </script>
 </body>
 
